offline boilerplate test

--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,15 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <!--All your scripts that you use in your client script-->
+
     <script src="/spool/spoolmath.js"></script>
     <script src="/spool/spoolmessagecodes.js"></script>
     <script src='/spool/spoolgraphics.js'></script>
     <script src="/spool/spoolui.js"></script>
-    <script src="/spool/spoolclient.js"></script>
     <script src="/spool/spoolrenderer.js"></script>
+
+    <script src="/spool/spoolengine.js"></script>
+    <script src="/spool/spoolclient.js"></script>
 
     <script src="/public/boilerclient.js"></script>
 
