--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
     <script src="/spool/spoolui.js"></script>
     <script src="/spool/spoolrenderer.js"></script>
 
+    <script src="/spool/spoolclientfilereader.js"></script>
+
     <script src="/spool/spoolengine.js"></script>
     <script src="/spool/spoolclient.js"></script>
 
