--- a/examplelocal/index.html
+++ b/examplelocal/index.html
@@ -27,25 +27,20 @@
 </head>
 
 <body style="overflow:hidden; padding:0px; margin:0px">
-
     <!--You need to include this socket.io script-->
     <script src="/socket.io/socket.io.js"></script>
 
     <!--All your scripts that you use in your client script-->
-
     <script src="/spool/spoolmath.js"></script>
-    <script src="/spool/spoolmessagecodes.js"></script>
-    <script src='/spool/spoolgraphics.js'></script>
-    <script src="/spool/spoolui.js"></script>
-    <script src="/spool/spoolrenderer.js"></script>
-
+    <script src="/spool/spoolutils.js"></script>
     <script src="/spool/spoolclientfilereader.js"></script>
-
+    <script src="/spool/spoolmessagecodes.js"></script>
+    <script src="/spool/spoolrenderer.js"></script>
+    <script src="/spool/spoolui.js"></script>
     <script src="/spool/spoolengine.js"></script>
     <script src="/spool/spoolclient.js"></script>
 
-    <script src="/public/boilerclient.js"></script>
-
+    <script src="/examplelocal/boilerclient.js"></script>
 </body>
 
 </html>
